// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | ListWithTitles Integration: ListWithTitles with left and right titles 1`] = `
<div>
  <div
    className="ListWithTitles__TitleContainer-sc-1mk4x8k-0 cWrugo"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          title1
        </span>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          title2
        </span>
      </div>
    </div>
  </div>
  <ol
    className="List__BaseList-sc-67l9u3-0 cLiOUp"
  >
    <li
      className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
      >
        <div>
          Left List Item 1
        </div>
        <div>
          Right List Item 1
        </div>
      </div>
    </li>
    <li
      className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
      >
        <div>
          Left List Item 2
        </div>
        <div>
          Right List Item 2
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Molecules | ListWithTitles Integration: ListWithTitles with left title 1`] = `
<div>
  <div
    className="ListWithTitles__TitleContainer-sc-1mk4x8k-0 cWrugo"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          title1
        </span>
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        />
      </div>
    </div>
  </div>
  <ol
    className="List__BaseList-sc-67l9u3-0 cLiOUp"
  >
    <li
      className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
      >
        <div>
          Left List Item 1
        </div>
        <div>
          Right List Item 1
        </div>
      </div>
    </li>
    <li
      className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
      >
        <div>
          Left List Item 2
        </div>
        <div>
          Right List Item 2
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Molecules | ListWithTitles Integration: ListWithTitles with no titles 1`] = `
<ol
  className="List__BaseList-sc-67l9u3-0 cLiOUp"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
    >
      <div>
        Left List Item 1
      </div>
      <div>
        Right List Item 1
      </div>
    </div>
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
    >
      <div>
        Left List Item 2
      </div>
      <div>
        Right List Item 2
      </div>
    </div>
  </li>
</ol>
`;

exports[`Storyshots Molecules | ListWithTitles Integration: ListWithTitles with right title 1`] = `
<div>
  <div
    className="ListWithTitles__TitleContainer-sc-1mk4x8k-0 cWrugo"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        />
      </div>
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
        >
          title1
        </span>
      </div>
    </div>
  </div>
  <ol
    className="List__BaseList-sc-67l9u3-0 cLiOUp"
  >
    <li
      className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
      >
        <div>
          Left List Item 1
        </div>
        <div>
          Right List Item 1
        </div>
      </div>
    </li>
    <li
      className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
    >
      <div
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 juusSY"
      >
        <div>
          Left List Item 2
        </div>
        <div>
          Right List Item 2
        </div>
      </div>
    </li>
  </ol>
</div>
`;
